add new page and fix some issues

--- a/src/文档.md
+++ b/src/文档.md
@@ -12,7 +12,7 @@
 *   [日志笔记](./日志笔记.md)
 *   [体重追踪器](./体重追踪器.md)
 *   [任务管理器](./任务管理器.md)
-*   [自定义 CSS 主题)(./主题.md#自定义css主题) _Steel Blue_
+*   [自定义 CSS 主题](./主题.md#自定义css主题) _Steel Blue_
 
 ### 恢复演示文件
 
