--- a/src/保存的搜索.md
+++ b/src/保存的搜索.md
@@ -1,6 +1,6 @@
 Trilium提供了一种将常用搜索另存为笔记树中的笔记的方法。搜索结果将作为此"saved search"笔记的子笔记出现。您可以看到它是如何工作的:
 
-![](gif/saved-search.gif)
+![](gifs/saved-search.gif)
 
 ### 使用脚本关系保存搜索
 
