--- a/src/克隆笔记.md
+++ b/src/克隆笔记.md
@@ -46,7 +46,7 @@ Trilium 的核心功能是能够将您的笔记组织成分层的树状结构。
 
 ### **演示**
 
-![](gif/create-clone.gif)
+![](gifs/create-clone.gif)
 
 在演示中，您可以看到如何使用上下文菜单创建克隆。也可以使用“Add Link”对话框或使用 CTRL+C 和 CTRL+V[快捷方式](./键盘快捷键.md)来执行此操作。
 
