--- a/src/图片.md
+++ b/src/图片.md
@@ -7,7 +7,7 @@ Trilium 支持存储和显示图像。支持的格式为 JPEG、PNG 和 GIF。
 
 要将图像添加到笔记中，只需将其从文件资源管理器拖到 Trilium 内的笔记编辑器中，图像就会被上传。
 
-![](gif/upload-image.gif)
+![](gifs/upload-image.gif)
 
 或者，您可以单击块工具栏，然后单击“插入图像”：
 
