--- a/src/树结构操作.md
+++ b/src/树结构操作.md
@@ -5,7 +5,7 @@
 
 正如您在演示中看到的那样，您可以简单地通过拖放注释来操作树：
 
-![](gif/drag-and-drop.gif)
+![](gifs/drag-and-drop.gif)
 
 **键盘操作**
 --------
@@ -17,7 +17,7 @@ Trilium 通过以下[快捷键](./键盘快捷键.md)提供基于键盘的快速
 *   `CTRL-RIGHT`- 通过将父级设置为当前上面的注释，在层次结构中向下移动注释（这有点难以解释 - 最好看演示或自己尝试）
 *   `LEFT`并`RIGHT`展开和折叠子树
 
-![](gif/move-note-with-keyboard.gif)
+![](gifs/move-note-with-keyboard.gif)
 
 **上下文菜单**
 ---------
