--- a/src/笔记导航.md
+++ b/src/笔记导航.md
@@ -8,13 +8,13 @@ Trilium的目标之一是在之间笔记提供快速舒适的导航。
 
 当然，这是基本功能和预期功能，但是值得一提的是Trilium在这里可以很好地发挥作用。
 
-![](gif/back-and-forwards.gif)
+![](gifs/back-and-forwards.gif)
 
 ## 跳转到笔记
 
 这对于快速查找和查看任意笔记非常有用，请单击顶部的`Jump to`按钮或按`CTRL-J`。然后输入笔记名称的一部分，自动完成功能将帮助您选择所需的笔记。
 
-![](gif/jump-to.gif)
+![](gifs/jump-to.gif)
 
 ## 最近的笔记
 
@@ -23,7 +23,7 @@ Trilium的目标之一是在之间笔记提供快速舒适的导航。
 要访问此功能，请单击顶部的`Jump to`按钮。默认情况下（当自动完成不输入任何内容时），此对话框将显示最近备忘的列表。
 
 或者，您可以单击右侧的"time"图标。
-![](gif/recent-notes.gif)
+![](gifs/recent-notes.gif)
 
 ==============================
 
@@ -37,14 +37,14 @@ This works identically to browser backwards / forwards, it's actually using buil
 
 Of course this is basic and expected functionality, but it's worth mentioning that Trilium plays nicely here.
 
-![](gif/back-and-forwards.gif)
+![](gifs/back-and-forwards.gif)
 
 ## Jump to note
 
 This is useful to quickly find and view arbitrary note - click on `Jump to` button on the top or press `CTRL-J`.
 Then type part of the note name and autocomplete will help you pick the desired note.
 
-![](gif/jump-to.gif)
+![](gifs/jump-to.gif)
 
 ### Recent notes
 
@@ -54,4 +54,4 @@ To access this functionality, click on `Jump to` button on the top. By default (
 
 Alternatively you can click on the "time" icon on the right.
 
-![](gif/recent-notes.gif)
+![](gifs/recent-notes.gif)
