--- a/src/笔记挂起.md
+++ b/src/笔记挂起.md
@@ -1,6 +1,6 @@
 笔记挂起(Note Hoisting)是一项标准的大纲功能，通过隐藏所有父级和同级笔记，您可以专注于（或"放大"）特定笔记及其子树。演示如下：
 
-![](gif/note-hoisting.gif)
+![](gifs/note-hoisting.gif)
 
 除了仅显示此子树之外，这还将全文搜索和["跳转到笔记"](./笔记导航.md#跳转到笔记)缩小为仅存在于挂起子树中的笔记。
 
