add new content: canvas note

--- a/src/笔记.md
+++ b/src/笔记.md
@@ -14,6 +14,8 @@
 *   已保存的搜索记录-包含保存的搜索查询，并动态显示搜索结果作为其子记录
 *   [关系映射图](./关系映射图.md)笔记-可视化笔记及其关系
 *   [书笔记](./书笔记.md)-显示其子笔记，对于阅读许多简短笔记很有用
+*   mermaid **new**-使用[mermaid.js](https://github.com/mermaid-js/mermaid)创建图表和流程图
+*   [画布笔记](./画布笔记.md) **new**-允许使用[excalidraw](https://github.com/excalidraw/excalidraw)在无限画布上手绘笔记和基本图表
 
 请记住，没有“文件夹”笔记类型。任何笔记都可以是文件夹笔记或“叶子”笔记。
 
