fix template and text note page

--- a/src/文本笔记.md
+++ b/src/文本笔记.md
@@ -1,5 +1,17 @@
 Trilium 使用了很棒的[CKEditor 5](https://ckeditor.com/ckeditor-5/)作为它的编辑组件。
 
+
+## 格式化
+默认情况下，Trilium文本笔记界面不显示任何工具栏或格式选项，这些需要通过以下方式启动：
+
+1. 选择文本将显示内联工具栏：
+
+![](images/text-notes-formatting-inline.png)
+
+2. 单击块工具栏：
+
+![](images/text-notes-formatting-block.png)
+
 **只读与编辑模式**
 -----------
 
