update email address

--- a/src/译者注.md
+++ b/src/译者注.md
@@ -2,7 +2,7 @@ __题外话__
 ------
 
 > 最近更新日期：2022-08-04
-> 如果发现错误，请[联系我](mailto:alexdhan@anche.no)改正
+> 如果发现错误，请[联系我](mailto:me@smj.im)改正
 
 __这是[Trilium](https://github.com/zadam/trilium)的中文Wiki.__
 
