--- a/src/译者注.md
+++ b/src/译者注.md
@@ -1,11 +1,12 @@
 __题外话__
 ------
 
-> 最近更新日期：2022-08-04
-> 如果发现错误，请[联系我](mailto:alexdhan@anche.no)改正
+> 最近更新日期：2023-07-27
+> 如果发现错误，请[联系我](mailto:me@smj.im)改正
+> 欢迎PR
 
 __这是[Trilium](https://github.com/zadam/trilium)的中文Wiki.__
 
-我非常喜欢这个软件, 所以就自己动手翻译了一下作者写的文档:)
+[我](https://smj.im)非常喜欢这个软件, 所以就自己动手翻译了一下作者写的文档:)
 
 最后, 再次感谢[@zadam](https://github.com/zadam)开发这个项目!!!
