--- a/src/译者注.md
+++ b/src/译者注.md
@@ -3,9 +3,11 @@ __题外话__
 
 > 最近更新日期：2023-07-27
 > 
-> 如果发现错误，请[联系我](mailto:me@smj.im)改正
+> 如果发现错误，请[邮件联系我](mailto:me@smj.im)改正
 > 
 > 欢迎PR
+> 
+> 我的个人小站：https://smj.im
 
 __这是[Trilium](https://github.com/zadam/trilium)的中文Wiki.__
 
