--- a/src/译者注.md
+++ b/src/译者注.md
@@ -7,7 +7,7 @@ __题外话__
 > 
 > 欢迎PR
 > 
-> 我的个人小站：https://smj.im
+> 我的个人小站：[https://smj.im](https://smj.im)
 
 __这是[Trilium](https://github.com/zadam/trilium)的中文Wiki.__
 
